tests/checker/diagnostics/0291_fun_monomorphic_int_bool_use_06.ml
let use_zeta f = (f 5, f true)
